DiaryService CRUD 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     defer-datasource-initialization: true
     open-in-view: false
     properties:
@@ -15,6 +15,9 @@ spring:
         show_sql: true
   main:
     allow-bean-definition-overriding: true
+
+openweathermap:
+    key: 527ac8e8dc7668476c42f7069d525586
 
 server:
   port: 8080
